--- a/SPY_Track.ipynb
+++ b/SPY_Track.ipynb
@@ -237,11 +237,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Report Date =  2023-04-12\n",
+      "Report Time = 23:15:50\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'scrape_yahoo_news' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Woon\\Desktop\\Columbia\\Applied Analytics\\Term3\\Sentiment_SNP\\SPY_Track.ipynb Cell 13\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Woon/Desktop/Columbia/Applied%20Analytics/Term3/Sentiment_SNP/SPY_Track.ipynb#X50sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mReport Time =\u001b[39m\u001b[39m\"\u001b[39m, current_time)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Woon/Desktop/Columbia/Applied%20Analytics/Term3/Sentiment_SNP/SPY_Track.ipynb#X50sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m YAHOO_NEWS_URL \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mhttps://finance.yahoo.com/quote/\u001b[39m\u001b[39m{\u001b[39;00mtext_input\u001b[39m}\u001b[39;00m\u001b[39m?p=\u001b[39m\u001b[39m{\u001b[39;00mtext_input\u001b[39m}\u001b[39;00m\u001b[39m&.tsrc=fin-srch\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Woon/Desktop/Columbia/Applied%20Analytics/Term3/Sentiment_SNP/SPY_Track.ipynb#X50sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m news_df \u001b[39m=\u001b[39m scrape_yahoo_news(YAHOO_NEWS_URL)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'scrape_yahoo_news' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "now = dt.now()\n",
+    "from datetime import datetime\n",
+    "\n",
+    "now = datetime.now()\n",
     "current_time = now.strftime(\"%H:%M:%S\")\n",
     "print(\"Report Date = \", date.today())\n",
     "print(\"Report Time =\", current_time)\n",
