--- a/SPY_Track.ipynb
+++ b/SPY_Track.ipynb
@@ -227,7 +227,7 @@
     "# text_input = input(\"Type in the Ticker: \")\n",
     "# print(\"You entered:\", text_input)\n",
     "\n",
-    "text_input = 'spy'"
+    "text_input = 'nusi'"
    ]
   },
   {
@@ -1629,6 +1629,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Headline Sentiment"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -1658,6 +1666,14 @@
    ],
    "source": [
     "sns.histplot(x = 'Sentiment', data = news_df[news_df['Score'] > 0.8], hue = 'Sentiment', hue_order=['POSITIVE', 'NEGATIVE'])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Content Sentiment"
    ]
   },
   {
@@ -1697,7 +1713,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Headline"
+    "# Headline Trigram"
    ]
   },
   {
@@ -2689,7 +2705,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Content"
+    "# Content Trigram"
    ]
   },
   {
