--- a/yahoo_news_scrape.ipynb
+++ b/yahoo_news_scrape.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,9 +47,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  503 of 503 completed\n",
+      "\n",
+      "4 Failed downloads:\n",
+      "- BF.B: No data found for this date range, symbol may be delisted\n",
+      "- GEHC: Data doesn't exist for startDate = 1577854800, endDate = 1641013200\n",
+      "- BRK.B: No data found for this date range, symbol may be delisted\n",
+      "- CEG: Data doesn't exist for startDate = 1577854800, endDate = 1641013200\n"
+     ]
+    }
+   ],
    "source": [
     "start = datetime.datetime(2020, 1, 1)\n",
     "end = datetime.datetime(2022, 1, 1)\n",
@@ -58,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,25 +90,338 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Symbol</th>\n",
+       "      <th>Adj Close</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-01-02</td>\n",
+       "      <td>A</td>\n",
+       "      <td>84.799675</td>\n",
+       "      <td>85.949997</td>\n",
+       "      <td>86.349998</td>\n",
+       "      <td>85.199997</td>\n",
+       "      <td>85.900002</td>\n",
+       "      <td>1410500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>496</th>\n",
+       "      <td>2020-01-03</td>\n",
+       "      <td>A</td>\n",
+       "      <td>83.438141</td>\n",
+       "      <td>84.570000</td>\n",
+       "      <td>85.330002</td>\n",
+       "      <td>84.500000</td>\n",
+       "      <td>84.669998</td>\n",
+       "      <td>1118300.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>992</th>\n",
+       "      <td>2020-01-06</td>\n",
+       "      <td>A</td>\n",
+       "      <td>83.684799</td>\n",
+       "      <td>84.820000</td>\n",
+       "      <td>84.820000</td>\n",
+       "      <td>83.599998</td>\n",
+       "      <td>84.000000</td>\n",
+       "      <td>1993200.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1488</th>\n",
+       "      <td>2020-01-07</td>\n",
+       "      <td>A</td>\n",
+       "      <td>83.941315</td>\n",
+       "      <td>85.080002</td>\n",
+       "      <td>85.260002</td>\n",
+       "      <td>83.940002</td>\n",
+       "      <td>83.959999</td>\n",
+       "      <td>1684700.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1984</th>\n",
+       "      <td>2020-01-08</td>\n",
+       "      <td>A</td>\n",
+       "      <td>84.770073</td>\n",
+       "      <td>85.919998</td>\n",
+       "      <td>86.470001</td>\n",
+       "      <td>85.199997</td>\n",
+       "      <td>85.959999</td>\n",
+       "      <td>1847600.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>249548</th>\n",
+       "      <td>2021-12-27</td>\n",
+       "      <td>ZTS</td>\n",
+       "      <td>244.140900</td>\n",
+       "      <td>246.509995</td>\n",
+       "      <td>246.720001</td>\n",
+       "      <td>243.080002</td>\n",
+       "      <td>244.389999</td>\n",
+       "      <td>807000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>250047</th>\n",
+       "      <td>2021-12-28</td>\n",
+       "      <td>ZTS</td>\n",
+       "      <td>241.902618</td>\n",
+       "      <td>244.250000</td>\n",
+       "      <td>247.839996</td>\n",
+       "      <td>243.639999</td>\n",
+       "      <td>247.000000</td>\n",
+       "      <td>1004400.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>250546</th>\n",
+       "      <td>2021-12-29</td>\n",
+       "      <td>ZTS</td>\n",
+       "      <td>244.655884</td>\n",
+       "      <td>247.029999</td>\n",
+       "      <td>247.850006</td>\n",
+       "      <td>243.639999</td>\n",
+       "      <td>244.020004</td>\n",
+       "      <td>939900.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>251045</th>\n",
+       "      <td>2021-12-30</td>\n",
+       "      <td>ZTS</td>\n",
+       "      <td>242.803879</td>\n",
+       "      <td>245.160004</td>\n",
+       "      <td>249.270004</td>\n",
+       "      <td>244.960007</td>\n",
+       "      <td>247.050003</td>\n",
+       "      <td>859100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>251544</th>\n",
+       "      <td>2021-12-31</td>\n",
+       "      <td>ZTS</td>\n",
+       "      <td>241.684723</td>\n",
+       "      <td>244.029999</td>\n",
+       "      <td>246.990005</td>\n",
+       "      <td>243.740005</td>\n",
+       "      <td>245.160004</td>\n",
+       "      <td>1073400.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>251545 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Date Symbol   Adj Close       Close        High         Low  \\\n",
+       "0      2020-01-02      A   84.799675   85.949997   86.349998   85.199997   \n",
+       "496    2020-01-03      A   83.438141   84.570000   85.330002   84.500000   \n",
+       "992    2020-01-06      A   83.684799   84.820000   84.820000   83.599998   \n",
+       "1488   2020-01-07      A   83.941315   85.080002   85.260002   83.940002   \n",
+       "1984   2020-01-08      A   84.770073   85.919998   86.470001   85.199997   \n",
+       "...           ...    ...         ...         ...         ...         ...   \n",
+       "249548 2021-12-27    ZTS  244.140900  246.509995  246.720001  243.080002   \n",
+       "250047 2021-12-28    ZTS  241.902618  244.250000  247.839996  243.639999   \n",
+       "250546 2021-12-29    ZTS  244.655884  247.029999  247.850006  243.639999   \n",
+       "251045 2021-12-30    ZTS  242.803879  245.160004  249.270004  244.960007   \n",
+       "251544 2021-12-31    ZTS  241.684723  244.029999  246.990005  243.740005   \n",
+       "\n",
+       "              Open     Volume  \n",
+       "0        85.900002  1410500.0  \n",
+       "496      84.669998  1118300.0  \n",
+       "992      84.000000  1993200.0  \n",
+       "1488     83.959999  1684700.0  \n",
+       "1984     85.959999  1847600.0  \n",
+       "...            ...        ...  \n",
+       "249548  244.389999   807000.0  \n",
+       "250047  247.000000  1004400.0  \n",
+       "250546  244.020004   939900.0  \n",
+       "251045  247.050003   859100.0  \n",
+       "251544  245.160004  1073400.0  \n",
+       "\n",
+       "[251545 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Symbol</th>\n",
+       "      <th>Close</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-01-02</td>\n",
+       "      <td>A</td>\n",
+       "      <td>85.949997</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-01-02</td>\n",
+       "      <td>AAL</td>\n",
+       "      <td>29.090000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-01-02</td>\n",
+       "      <td>AAP</td>\n",
+       "      <td>159.410004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-01-02</td>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>75.087502</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-01-02</td>\n",
+       "      <td>ABBV</td>\n",
+       "      <td>89.550003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>251540</th>\n",
+       "      <td>2021-12-31</td>\n",
+       "      <td>YUM</td>\n",
+       "      <td>138.860001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>251541</th>\n",
+       "      <td>2021-12-31</td>\n",
+       "      <td>ZBH</td>\n",
+       "      <td>123.339806</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>251542</th>\n",
+       "      <td>2021-12-31</td>\n",
+       "      <td>ZBRA</td>\n",
+       "      <td>595.200012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>251543</th>\n",
+       "      <td>2021-12-31</td>\n",
+       "      <td>ZION</td>\n",
+       "      <td>63.160000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>251544</th>\n",
+       "      <td>2021-12-31</td>\n",
+       "      <td>ZTS</td>\n",
+       "      <td>244.029999</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>251545 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Date Symbol       Close\n",
+       "0      2020-01-02      A   85.949997\n",
+       "1      2020-01-02    AAL   29.090000\n",
+       "2      2020-01-02    AAP  159.410004\n",
+       "3      2020-01-02   AAPL   75.087502\n",
+       "4      2020-01-02   ABBV   89.550003\n",
+       "...           ...    ...         ...\n",
+       "251540 2021-12-31    YUM  138.860001\n",
+       "251541 2021-12-31    ZBH  123.339806\n",
+       "251542 2021-12-31   ZBRA  595.200012\n",
+       "251543 2021-12-31   ZION   63.160000\n",
+       "251544 2021-12-31    ZTS  244.029999\n",
+       "\n",
+       "[251545 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.groupby(['Date', 'Symbol'])['Close'].mean().reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,9 +430,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Symbol\n",
+       "A       118.534911\n",
+       "AAL      17.806792\n",
+       "AAP     170.478376\n",
+       "AAPL    118.123030\n",
+       "ABBV    101.973228\n",
+       "           ...    \n",
+       "YUM     106.510851\n",
+       "ZBH     139.071633\n",
+       "ZBRA    392.213782\n",
+       "ZION     46.037307\n",
+       "ZTS     166.674218\n",
+       "Name: Close, Length: 499, dtype: float64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby(['Symbol'])['Close'].mean().reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Series.sort_values() got an unexpected keyword argument 'by'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Woon\\Desktop\\Columbia\\Applied Analytics\\Term3\\Sentiment_SNP\\yahoo_news_scrape.ipynb Cell 11\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Woon/Desktop/Columbia/Applied%20Analytics/Term3/Sentiment_SNP/yahoo_news_scrape.ipynb#X13sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m df \u001b[39m=\u001b[39m df\u001b[39m.\u001b[39;49mgroupby([\u001b[39m'\u001b[39;49m\u001b[39mSymbol\u001b[39;49m\u001b[39m'\u001b[39;49m])[\u001b[39m'\u001b[39;49m\u001b[39mClose\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m.\u001b[39;49mmean()\u001b[39m.\u001b[39;49msort_values(by\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mClose\u001b[39;49m\u001b[39m'\u001b[39;49m, ascending \u001b[39m=\u001b[39;49m \u001b[39mFalse\u001b[39;49;00m)[:\u001b[39m10\u001b[39m]\n",
+      "File \u001b[1;32mc:\\Users\\Woon\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\util\\_decorators.py:311\u001b[0m, in \u001b[0;36mdeprecate_nonkeyword_arguments.<locals>.decorate.<locals>.wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    305\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(args) \u001b[39m>\u001b[39m num_allow_args:\n\u001b[0;32m    306\u001b[0m     warnings\u001b[39m.\u001b[39mwarn(\n\u001b[0;32m    307\u001b[0m         msg\u001b[39m.\u001b[39mformat(arguments\u001b[39m=\u001b[39marguments),\n\u001b[0;32m    308\u001b[0m         \u001b[39mFutureWarning\u001b[39;00m,\n\u001b[0;32m    309\u001b[0m         stacklevel\u001b[39m=\u001b[39mstacklevel,\n\u001b[0;32m    310\u001b[0m     )\n\u001b[1;32m--> 311\u001b[0m \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
+      "\u001b[1;31mTypeError\u001b[0m: Series.sort_values() got an unexpected keyword argument 'by'"
+     ]
+    }
+   ],
    "source": [
     "df = df.groupby(['Symbol'])['Close'].mean().sort_values(by='Close', ascending = False)[:10]"
    ]
