--- a/yahoo_news_scrape.ipynb
+++ b/yahoo_news_scrape.ipynb
@@ -81,213 +81,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Symbol</th>\n",
-       "      <th>Adj Close</th>\n",
-       "      <th>Close</th>\n",
-       "      <th>High</th>\n",
-       "      <th>Low</th>\n",
-       "      <th>Open</th>\n",
-       "      <th>Volume</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2020-01-02</td>\n",
-       "      <td>A</td>\n",
-       "      <td>84.108360</td>\n",
-       "      <td>85.949997</td>\n",
-       "      <td>86.349998</td>\n",
-       "      <td>85.199997</td>\n",
-       "      <td>85.900002</td>\n",
-       "      <td>1410500.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>496</th>\n",
-       "      <td>2020-01-03</td>\n",
-       "      <td>A</td>\n",
-       "      <td>82.757942</td>\n",
-       "      <td>84.570000</td>\n",
-       "      <td>85.330002</td>\n",
-       "      <td>84.500000</td>\n",
-       "      <td>84.669998</td>\n",
-       "      <td>1118300.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>992</th>\n",
-       "      <td>2020-01-06</td>\n",
-       "      <td>A</td>\n",
-       "      <td>83.002579</td>\n",
-       "      <td>84.820000</td>\n",
-       "      <td>84.820000</td>\n",
-       "      <td>83.599998</td>\n",
-       "      <td>84.000000</td>\n",
-       "      <td>1993200.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1488</th>\n",
-       "      <td>2020-01-07</td>\n",
-       "      <td>A</td>\n",
-       "      <td>83.257011</td>\n",
-       "      <td>85.080002</td>\n",
-       "      <td>85.260002</td>\n",
-       "      <td>83.940002</td>\n",
-       "      <td>83.959999</td>\n",
-       "      <td>1684700.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1984</th>\n",
-       "      <td>2020-01-08</td>\n",
-       "      <td>A</td>\n",
-       "      <td>84.079010</td>\n",
-       "      <td>85.919998</td>\n",
-       "      <td>86.470001</td>\n",
-       "      <td>85.199997</td>\n",
-       "      <td>85.959999</td>\n",
-       "      <td>1847600.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>249548</th>\n",
-       "      <td>2021-12-27</td>\n",
-       "      <td>ZTS</td>\n",
-       "      <td>244.140900</td>\n",
-       "      <td>246.509995</td>\n",
-       "      <td>246.720001</td>\n",
-       "      <td>243.080002</td>\n",
-       "      <td>244.389999</td>\n",
-       "      <td>807000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>250047</th>\n",
-       "      <td>2021-12-28</td>\n",
-       "      <td>ZTS</td>\n",
-       "      <td>241.902618</td>\n",
-       "      <td>244.250000</td>\n",
-       "      <td>247.839996</td>\n",
-       "      <td>243.639999</td>\n",
-       "      <td>247.000000</td>\n",
-       "      <td>1004400.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>250546</th>\n",
-       "      <td>2021-12-29</td>\n",
-       "      <td>ZTS</td>\n",
-       "      <td>244.655914</td>\n",
-       "      <td>247.029999</td>\n",
-       "      <td>247.850006</td>\n",
-       "      <td>243.639999</td>\n",
-       "      <td>244.020004</td>\n",
-       "      <td>939900.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>251045</th>\n",
-       "      <td>2021-12-30</td>\n",
-       "      <td>ZTS</td>\n",
-       "      <td>242.803894</td>\n",
-       "      <td>245.160004</td>\n",
-       "      <td>249.270004</td>\n",
-       "      <td>244.960007</td>\n",
-       "      <td>247.050003</td>\n",
-       "      <td>859100.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>251544</th>\n",
-       "      <td>2021-12-31</td>\n",
-       "      <td>ZTS</td>\n",
-       "      <td>241.684723</td>\n",
-       "      <td>244.029999</td>\n",
-       "      <td>246.990005</td>\n",
-       "      <td>243.740005</td>\n",
-       "      <td>245.160004</td>\n",
-       "      <td>1073400.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>251545 rows × 8 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "             Date Symbol   Adj Close       Close        High         Low  \\\n",
-       "0      2020-01-02      A   84.108360   85.949997   86.349998   85.199997   \n",
-       "496    2020-01-03      A   82.757942   84.570000   85.330002   84.500000   \n",
-       "992    2020-01-06      A   83.002579   84.820000   84.820000   83.599998   \n",
-       "1488   2020-01-07      A   83.257011   85.080002   85.260002   83.940002   \n",
-       "1984   2020-01-08      A   84.079010   85.919998   86.470001   85.199997   \n",
-       "...           ...    ...         ...         ...         ...         ...   \n",
-       "249548 2021-12-27    ZTS  244.140900  246.509995  246.720001  243.080002   \n",
-       "250047 2021-12-28    ZTS  241.902618  244.250000  247.839996  243.639999   \n",
-       "250546 2021-12-29    ZTS  244.655914  247.029999  247.850006  243.639999   \n",
-       "251045 2021-12-30    ZTS  242.803894  245.160004  249.270004  244.960007   \n",
-       "251544 2021-12-31    ZTS  241.684723  244.029999  246.990005  243.740005   \n",
-       "\n",
-       "              Open     Volume  \n",
-       "0        85.900002  1410500.0  \n",
-       "496      84.669998  1118300.0  \n",
-       "992      84.000000  1993200.0  \n",
-       "1488     83.959999  1684700.0  \n",
-       "1984     85.959999  1847600.0  \n",
-       "...            ...        ...  \n",
-       "249548  244.389999   807000.0  \n",
-       "250047  247.000000  1004400.0  \n",
-       "250546  244.020004   939900.0  \n",
-       "251045  247.050003   859100.0  \n",
-       "251544  245.160004  1073400.0  \n",
-       "\n",
-       "[251545 rows x 8 columns]"
+       "array([['TSLA'],\n",
+       "       ['AAPL'],\n",
+       "       ['AMZN'],\n",
+       "       ['F'],\n",
+       "       ['BAC'],\n",
+       "       ['AMD'],\n",
+       "       ['T'],\n",
+       "       ['AAL'],\n",
+       "       ['NVDA'],\n",
+       "       ['CCL'],\n",
+       "       ['GOOGL'],\n",
+       "       ['WFC'],\n",
+       "       ['PFE'],\n",
+       "       ['MSFT'],\n",
+       "       ['GOOG'],\n",
+       "       ['INTC'],\n",
+       "       ['XOM'],\n",
+       "       ['MRO'],\n",
+       "       ['NCLH'],\n",
+       "       ['OXY'],\n",
+       "       ['UAL'],\n",
+       "       ['C'],\n",
+       "       ['FCX'],\n",
+       "       ['CSCO'],\n",
+       "       ['DAL']], dtype=object)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "X = np.array(df.groupby(['Symbol'])['Volume'].mean().reset_index().sort_values(by='Volume', ascending = False)[:25]['Symbol']).reshape(-1, 1)\n",
+    "X"
    ]
   },
   {
@@ -618,7 +462,7 @@
     }
    ],
    "source": [
-    "df"
+    "df.groupby(['Date', 'Symbol'])['Close'].mean().reset_index()"
    ]
   },
   {
