--- a/SPY_Track.ipynb
+++ b/SPY_Track.ipynb
@@ -4986,7 +4986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -5022,7 +5022,9 @@
     "df_dates['Date'] = time_list\n",
     "\n",
     "#Ensure all reading time exists, fill with 0 for missing reading times\n",
-    "df = pd.merge(df, df_dates, on='Date', how='right')"
+    "df = pd.merge(df, df_dates, on='Date', how='right')\n",
+    "\n",
+    "df.fillna(method='ffill', inplace=True)"
    ]
   },
   {
@@ -5192,7 +5194,9 @@
     "df_dates['Date'] = time_list\n",
     "\n",
     "#Ensure all reading time exists, fill with 0 for missing reading times\n",
-    "df1 = pd.merge(df1, df_dates, on='Date', how='right')"
+    "df1 = pd.merge(df1, df_dates, on='Date', how='right')\n",
+    "\n",
+    "df1.fillna(method='ffill', inplace=True)"
    ]
   },
   {
