--- a/SPY_Track.ipynb
+++ b/SPY_Track.ipynb
@@ -539,7 +539,16 @@
     }
    ],
    "source": [
-    "news_df2.head()"
+    "news_df2.head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_input2 = input(\"How many rows of news?: \")"
    ]
   },
   {
@@ -548,6 +557,15 @@
    "metadata": {},
    "source": [
     "# Sentiment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.histplot(x = 'Sentiment', data = news_df2[:text_input2], hue = 'Sentiment', hue_order=['POSITIVE', 'NEGATIVE'])"
    ]
   },
   {
