--- a/SPY_Track.ipynb
+++ b/SPY_Track.ipynb
@@ -3128,6 +3128,7 @@
     }
    ],
    "source": [
+    "#Past 1 year data\n",
     "spy_ohlc_df = yf.download(text_input, start=dt.date.today() - dt.timedelta(days=365), end=dt.date.today())\n",
     "df1=spy_ohlc_df.reset_index()\n",
     "\n",
@@ -3320,6 +3321,7 @@
     }
    ],
    "source": [
+    "#Past week data\n",
     "spy_ohlc_df = yf.download(text_input, start=dt.date.today() - dt.timedelta(days=7), end=dt.date.today(), interval='1m')\n",
     "df1=spy_ohlc_df.reset_index()\n",
     "\n",
