--- a/SPY_Track.ipynb
+++ b/SPY_Track.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Importing Required Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -42,6 +50,14 @@
     "pd.set_option('display.max_seq_items', None)\n",
     "pd.set_option('display.max_colwidth', 500)\n",
     "pd.set_option('expand_frame_repr', True)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Collection"
    ]
   },
   {
