--- a/SPY_Track.ipynb
+++ b/SPY_Track.ipynb
@@ -66,6 +66,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Fuction to collect the news doc via infinite scrolling\n",
+    "\n",
     "def get_page(url):\n",
     "    \"\"\"Download a webpage and return a beautiful soup doc\"\"\"\n",
     "    ##### Web scrapper for infinite scrolling page #####\n",
@@ -98,6 +100,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Function to extract news tags from the doc\n",
+    "\n",
     "def get_news_tags(doc):\n",
     "    \"\"\"Get the list of tags containing news information\"\"\"\n",
     "    news_class = \"Ov(h) Pend(44px) Pstart(25px)\" ## class name of div tag \n",
@@ -111,6 +115,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Parsing news data from the news tags\n",
+    "\n",
     "def parse_news(news_tag):\n",
     "    \"\"\"Get the news data point and return dictionary\"\"\"\n",
     "    news_source = news_tag.find_all('span')[0].text #source\n",
@@ -131,6 +137,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Function to utilize all the above functions and organize the collected data into a dataframe\n",
+    "\n",
     "def scrape_yahoo_news(url, path=None):\n",
     "    \"\"\"Get the yahoo finance market news and write them to CSV file \"\"\"\n",
     "    if path is None:\n",
