--- a/SPY_Track.ipynb
+++ b/SPY_Track.ipynb
@@ -10,18 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Woon\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -30,7 +21,7 @@
     "import matplotlib.pyplot as plt\n",
     "from prophet import Prophet\n",
     "import datetime as dt\n",
-    "from datetime import date\n",
+    "#from datetime import date\n",
     "import tkinter.messagebox as mbox\n",
     "\n",
     "from bs4 import BeautifulSoup\n",
@@ -285,11 +276,9 @@
     }
    ],
    "source": [
-    "from datetime import datetime\n",
-    "\n",
-    "now = datetime.now()\n",
+    "now = dt.datetime.now()\n",
     "current_time = now.strftime(\"%H:%M:%S\")\n",
-    "print(\"Report Date = \", date.today())\n",
+    "print(\"Report Date = \", dt.datetime.today())\n",
     "print(\"Report Time =\", current_time)\n",
     "YAHOO_NEWS_URL = f'https://finance.yahoo.com/quote/{text_input}?p={text_input}&.tsrc=fin-srch'\n",
     "news_df = scrape_yahoo_news(YAHOO_NEWS_URL)"
@@ -3839,7 +3828,7 @@
    ],
    "source": [
     "#Past 3 year data\n",
-    "spy_ohlc_df = yf.download(text_input, start=dt.date.today() - dt.timedelta(days=1095), end=dt.date.today())\n",
+    "spy_ohlc_df = yf.download(text_input, start=dt.datetime.today() - dt.timedelta(days=1095), end=dt.datetime.today())\n",
     "df=spy_ohlc_df.reset_index()"
    ]
   },
@@ -4005,7 +3994,7 @@
    "source": [
     "# Plot the forecasted data\n",
     "model.plot(forecast, xlabel='Date', ylabel='SPY Price')\n",
-    "plt.xlim(dt.date.today() - dt.timedelta(days=730), dt.date.today() + dt.timedelta(days=365))\n",
+    "plt.xlim(dt.datetime.today() - dt.timedelta(days=730), dt.datetime.today() + dt.timedelta(days=365))\n",
     "plt.ylim(forecast['yhat'].mean()*0.75, forecast['yhat'].mean()*1.25)\n",
     "\n",
     "# Plot the forecasted trend and seasonality components\n",
