--- a/SPY_Track.ipynb
+++ b/SPY_Track.ipynb
@@ -38,6 +38,8 @@
     "from selenium import webdriver\n",
     "from urllib.parse import urljoin\n",
     "\n",
+    "\n",
+    "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
@@ -162,6 +164,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Import Libraries for NLP"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -176,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -209,6 +219,9 @@
     "from plotly import tools\n",
     "import plotly.offline as py\n",
     "py.init_notebook_mode(connected=True)\n",
+    "\n",
+    "import nltk\n",
+    "from nltk import word_tokenize\n",
     "\n",
     "from transformers import pipeline"
    ]
