--- a/SPY_Track.ipynb
+++ b/SPY_Track.ipynb
@@ -23,43 +23,47 @@
     }
    ],
    "source": [
+    "# Libraries for data collection and manipulation\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import yfinance as yf\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "from prophet import Prophet\n",
+    "#import numpy as np\n",
     "import datetime as dt\n",
+    "import yfinance as yf\n",
     "\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")\n",
+    "# Libraries for Data Visualization\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from plotly import tools\n",
+    "import plotly.offline as py\n",
+    "py.init_notebook_mode(connected=True)\n",
     "\n",
-    "from IPython.core.interactiveshell import InteractiveShell\n",
-    "InteractiveShell.ast_node_interactivity = 'all'\n",
     "\n",
+    "# Libraries for Time Series Analysis\n",
+    "from prophet import Prophet\n",
     "\n",
-    "\n",
+    "# Importing helper functions\n",
     "import sys\n",
     "sys.path.insert(1, 'C:/Users/Woon/Desktop/Columbia/Applied Analytics/Term3/Sentiment_SNP')\n",
     "import helper_functions\n",
     "from helper_functions import *\n",
     "\n",
     "\n",
+    "# Libraries for NLP\n",
+    "from collections import defaultdict\n",
+    "from transformers import pipeline\n",
+    "\n",
     "\n",
     "# Environment settings: \n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "from IPython.core.interactiveshell import InteractiveShell\n",
+    "InteractiveShell.ast_node_interactivity = 'all'\n",
+    "\n",
     "pd.set_option('display.max_column', None)\n",
     "pd.set_option('display.max_rows', None)\n",
     "pd.set_option('display.max_seq_items', None)\n",
     "pd.set_option('display.max_colwidth', 500)\n",
     "pd.set_option('expand_frame_repr', True)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Data Collection"
    ]
   },
   {
@@ -100,14 +104,7 @@
      "output_type": "display_data"
     }
    ],
-   "source": [
-    "from collections import defaultdict\n",
-    "from plotly import tools\n",
-    "import plotly.offline as py\n",
-    "py.init_notebook_mode(connected=True)\n",
-    "\n",
-    "from transformers import pipeline"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
